--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "^2.1.4",
     "body-parser": "^1.15.2",
     "chance": "^1.0.4",
+    "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "log4js": "^1.0.1",
