--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "config.js",
   "scripts": {
     "test": "mocha ./spec/*",
-    "start": "PORT=5000 nodemon index.js"
+    "start": "PORT=5000 node index.js"
   },
   "author": "",
   "license": "ISC",
