--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "es6": true,
-        "node": true
+        "node": true,
+        "mocha": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
@@ -23,6 +24,7 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "no-console":0
     }
 }
